server/error_output.txt
node : file:///C:/Users/M%20S
%20I/Downloads/final%20hotel/
server/test.js:1
At line:1 char:1
+ node test.js 2>&1 | 
Out-File -FilePath 
error_output.txt -Encoding 
utf ...
+ ~~~~~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: (file://  
  /C:/User...erver/test.js   
 :1:String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
import brevo from 
'@getbrevo/brevo';
       ^^^^^
SyntaxError: The requested 
module '@getbrevo/brevo' 
does not provide an export 
named 'default'
    at 
ModuleJob._instantiate (node:
internal/modules/esm/module_j
ob:220:21)
    at async ModuleJob.run (n
ode:internal/modules/esm/modu
le_job:321:5)
    at async onImport.tracePr
omise.__proto__ (node:interna
l/modules/esm/loader:644:26)
    at async asyncRunEntryPoi
ntWithESMLoader (node:interna
l/modules/run_main:117:5)

Node.js v22.17.0
